--- a/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
@@ -92,10 +92,10 @@
             </div>
             <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;">
-                <div class="icon-container" (click)="getComboExcel()">
+                <!-- <div class="icon-container" (click)="getComboExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
-                </div>
+                </div> -->
             </div>
             <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;">
@@ -225,10 +225,10 @@
                                 <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
                                 <div class="tooltip">Excel</div>
                             </div>
-                            <div class="export-icon col-6 col-md-3" (click)="getPDF()">
+                            <!-- <div class="export-icon col-6 col-md-3" (click)="getPDF()">
                                 <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
                                 <div class="tooltip">Pdf</div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
