--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,8 +165,8 @@ body {
 }
 
 .ag-header-cell-label {
-    align-items: left;
-    justify-content: left;
+    align-items: center;
+    justify-content: center;
 }
 
 .ag-header-row {
