--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -5,38 +5,7 @@
             <mat-expansion-panel-header>
                 <mat-panel-title class="text2">PACKAGE BASED REPORTS</mat-panel-title>
             </mat-expansion-panel-header>
-            <!-- <div class="cardContainer">
-                      <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('package')" style="background-image: url('path-to-your-image.jpg');">
-                    <i class="fas fa-layer-group royal-icon"></i>
-                    <div class="royal-content">
-                        <strong>Logs of Creation and Modification  <br> of Packages</strong>
-                    </div>
-                    <div class="tooltip">PACKAGE MODIFICATION</div>
-                </div>
-                
-                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('addon_package')"><i
-                        class="fas fa-cube"></i>
-                    <div><strong>Logs of Creation and modification of  <br> addonpackages  for any particular
-                            period</strong>
-                    </div>
-                    <div class="tooltip">ADDON PACKAGE MODIFICATION </div>
-
-                </div>
-                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('channel_history')"><i
-                        class="fas fa-calendar-alt"></i>
-                    <div><strong>Logs of Creation and modification of  <br> Channels for any particular period</strong> </div>
-                    <div class="tooltip">CHANNEL UPDATE HISTORY LOG </div>
-
-                </div>
-                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('combo')"><i
-                        class="fas fa-file-invoice"></i>
-                    <div><strong>Combo Package  Report</strong> </div>
-                    <div class="tooltip">COMBO PACKAGE </div>
-                </div>
-            </div> -->
-
-
-            <div class="cardContainer">
+                      <div class="cardContainer">
                 <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('package')">
                     <i class="fas fa-layer-group royal-icon"></i>
                     <div class="royal-content">
@@ -110,17 +79,17 @@
                     </div>
                     <div class="tooltip">AS ON DATE ACTIVE/DEACTIVE (ALL TYPES OF PRODUCTS) </div>
                 </div>
-                <!-- <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Synchronization')"><i
+                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Synchronization')"><i
                         class="fas fa-file-alt"></i>
                     <div><strong>Synchronization Report</strong> </div>
                     <div class="tooltip">SYNCHRONIZATION</div>
-                </div> -->
+                </div>
             </div>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- -------------------------------Broadcaster Reports-----------------------------------
-<section>
+<!-- -------------------------------Broadcaster Reports----------------------------------- -->
+<!-- <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
             <mat-expansion-panel-header>
@@ -154,8 +123,8 @@
             </div>
         </mat-expansion-panel>
     </mat-accordion>
-</section>
---------------------------------History Reports--------------------------------------------------------
+</section> -->
+<!-- --------------------------------History Reports-------------------------------------------------------- -->
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -186,7 +155,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
---------------------------------Suspend reports-----------------------------------------------------------
+<!-- --------------------------------Suspend reports----------------------------------------------------------- -->
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -212,7 +181,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
--------------------------------CAS operation reports (Historical Reports)-----------------------------------------------------
+<!-- -------------------------------CAS operation reports (Historical Reports)----------------------------------------------------- -->
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -244,7 +213,7 @@
     </mat-accordion>
 </section>
 
---------------------------------count reports----------------------------------------------------------
+<!-- --------------------------------count reports---------------------------------------------------------- -->
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -265,8 +234,8 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
---------------------------------count reports----------------------------------------------------------
-<div style="background-color: rgba(109, 107, 107, 0.8);padding: 1rem;">
+<!-- --------------------------------count reports---------------------------------------------------------- -->
+<!-- <div style="background-color: rgba(109, 107, 107, 0.8);padding: 1rem;">
     <h3 style="color: rgb(255, 255, 255);">COUNT REPORTS</h3>
 </div>
 <section>
