--- a/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/bulk-recharge/bulk-recharge.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/bulk-recharge/bulk-recharge.component.html
@@ -1,42 +1,44 @@
-
-
 <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
     <h6>NEW RECHARGE FOR GROUP OF OPERATOR</h6>
     <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
 </div>
-<div class=" display_1 justify-content-center align-items-center mobile">
-    <div class="align-items-center justify-content-center  mb-3" style="margin: auto;max-height: 300px;overflow: auto;">
+<div style="margin: auto;max-height: 820px;overflow: auto;">
 
-        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation
-            [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
-            (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
-            [enableCellTextSelection]="true">
-        </ag-grid-angular>
-    </div>
-    <div class="col-12 col-md-12 d-flex justify-content-center align-items-center ">
-        <div class="input-box">
-            <div class="mb-3 edit">
-                <div class="col-12 col-md-6">
-                    <label class="form-label">Amount</label>
-                </div>
-                <div class="col-12 col-md-6">
-                    <input class="" type="text" [(ngModel)]="amount" (keypress)="onKeydown($event)">
-                </div>
-            </div>
 
-            <div class="mb-3 edit">
-                <div class="col-12 col-md-6">
-                    <label class="form-label">Transaction Remarks </label>
+    <div class=" display_1 justify-content-center align-items-center mobile">
+        <div class="align-items-center justify-content-center  mb-3" style="max-height: 700px;overflow: auto;">
+            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation
+                [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
+                (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
+                [enableCellTextSelection]="true">
+            </ag-grid-angular>
+        </div>
+        <div class="col-12 col-md-12 d-flex justify-content-center align-items-center ">
+            <div class="input-box">
+                <div class="mb-3 edit">
+                    <div class="col-12 col-md-6">
+                        <label class="form-label">Amount</label>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <input class="" type="text" [(ngModel)]="amount" (keypress)="onKeydown($event)">
+                    </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <textarea type="text" [(ngModel)]="remarks"></textarea>
+
+                <div class="mb-3 edit">
+                    <div class="col-12 col-md-6">
+                        <label class="form-label">Transaction Remarks </label>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <textarea type="text" [(ngModel)]="remarks"></textarea>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="d-flex justify-content-center align-item-center mx-5 mb-4">
-    <button type="button" class="btn btn-danger me-2" (click)="toggleedit()">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="onSubmit()" [disabled]="!remarks || !amount ">Recharge</button>
+    <div class="d-flex justify-content-center align-item-center mx-5 mb-4">
+        <button type="button" class="btn btn-danger me-2" (click)="toggleedit()">Cancel</button>
+        <button type="button" class="btn btn-success" (click)="onSubmit()"
+            [disabled]="!remarks || !amount ">Recharge</button>
+    </div>
 </div>
