--- a/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.html
@@ -17,9 +17,9 @@
                         <div class="mx-2 ">
                             <mat-form-field appearance="outline">
                                 <mat-date-range-input [rangePicker]="picker">
-                                    <input matStartDate matInput placeholder="Start date"
+                                    <input matStartDate matInput placeholder="Start date" 
                                         (dateChange)="getFromDate($event)">
-                                    <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)">
+                                    <input matEndDate matInput placeholder="End date"  (dateChange)="getToDate($event)">
                                 </mat-date-range-input>
                                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-date-range-picker #picker></mat-date-range-picker>
@@ -515,8 +515,8 @@
                         <div class="mx-2 ">
                             <mat-form-field class="input-field" appearance="outline">
                                 <mat-label>Choose a date</mat-label>
-                                <input matInput [matDatepicker]="picker" (dateChange)="logValues($event)"
-                                    [(ngModel)]="date" placeholder="Select a Date" readonly>
+                                <input matInput [matDatepicker]="picker" (dateChange)="logValues($event)" 
+                                  [value]="cur_date" placeholder="Select a Date" readonly>
                                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
                             </mat-form-field>
@@ -563,7 +563,7 @@
                         <div class="mx-2 ">
                             <mat-form-field appearance="outline">
                                 <mat-date-range-input [rangePicker]="picker">
-                                    <input matStartDate matInput placeholder="Start date"
+                                    <input matStartDate matInput placeholder="Start date" 
                                         (dateChange)="getFromDate($event)">
                                     <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)">
                                 </mat-date-range-input>
@@ -617,9 +617,9 @@
                         <div class="mx-2 ">
                             <mat-form-field appearance="outline">
                                 <mat-date-range-input [rangePicker]="picker">
-                                    <input matStartDate matInput placeholder="Start date"
+                                    <input matStartDate matInput placeholder="Start date" 
                                         (dateChange)="getFromDate($event)">
-                                    <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)">
+                                    <input matEndDate matInput placeholder="End date"  (dateChange)="getToDate($event)">
                                 </mat-date-range-input>
                                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-date-range-picker #picker></mat-date-range-picker>
