--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -89,7 +89,7 @@
     </mat-accordion>
 </section>
 <!-- -------------------------------Broadcaster Reports----------------------------------- -->
-<!-- <section>
+<section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
             <mat-expansion-panel-header>
@@ -123,7 +123,7 @@
             </div>
         </mat-expansion-panel>
     </mat-accordion>
-</section> -->
+</section>
 <!-- --------------------------------History Reports-------------------------------------------------------- -->
 <section>
     <mat-accordion class="example-headers-align">
